z-index Issue Fixed

--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -4,6 +4,10 @@
   margin-bottom: 5rem;
   position: relative;
 
+  &:hover {
+    z-index: 1;
+  }
+
   &__title {
     color: white;
     font-size: 2rem;
