--- a/src/components/listItem/ListItem.scss
+++ b/src/components/listItem/ListItem.scss
@@ -5,12 +5,9 @@
   border-radius: 0.5rem;
   margin: 0 0.2rem;
   overflow: hidden;
-  position: relative;
+  // position: relative;
   cursor: pointer;
-
-  &__wrapper {
-    transition: transform 0.5s ease;
-  }
+  transition: transform 0.5s ease;
 
   &__image-container {
     width: 100%;
@@ -28,16 +25,9 @@
 
   &:hover {
     overflow: visible;
-    box-shadow: 2.5rem 2.5rem 10rem 8rem rgba(0, 0, 0, 1);
-    z-index: 1;
-
-    .listItem__wrapper {
-      transform: scale(1.5, 1.4) translateY(-20%); //20
-      position: absolute;
-      left: 0;
-      right: 0;
-      z-index: 999;
-    }
+    box-shadow: 2.5rem 2.5rem 10rem 5rem rgba(0, 0, 0, 0.5);
+    transform: scale(1.5) translateY(-50%);
+    z-index: 10;
 
     .listItem__image-container {
       border-radius: 0.5rem 0.5rem 0 0;
